# rust_rest_api

./: .gitignore  Cargo.toml
src/: main.rs  schema.rs
src/config/: mod.rs
src/controllers/: auth_controller.rs  user_controller.rs
src/models/: user.rs
src/routes/: mod.rs
src/services/: auth_service.rs  user_service.rs
