[package]
name = "rust_rest_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"       
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
bcrypt = "0.10"    
diesel = { version = "2.0", features = ["postgres", "r2d2", "uuid"] }
dotenv = "0.15"            

[dependencies.derive_more]
version = "0.99"          
